--- a/info.org
+++ b/info.org
@@ -1,11 +1,5 @@
+
 * Nagra
-** send an event from the command line
-*** for the moment event id and app name is hardcoded in the nsm_er.cfg
-*** add the following lines to the /soft/ngesoft/nge1/nsm_er/current/param/nsm_er.cfg
-[RANGES#26000]
-name = "totott"
-*** restart the agent
-cmd>start_nsm_er_nge1 
 ** interrogate_mo
 start_VBfind_common
 interrogate_mo_nge1 MO method retType paramName paramValue paramType ...
@@ -19,15 +13,6 @@ interrogate_mo_j2ep1 /helablinux02-oleg/j2ep-test-war_oleg/MOB_J2epTest setAttr_
 ** send event
    /soft/local/common/watchdog/current/bin/nsm_message -eve 26094 -txt "<NSMTAG>my test app<NSMTAG>  <NSMTAG>host-name<NSMTAG> <NSMTAG>cas-name<NSMTAG>." -prg cfg_config.ksh -ora "jboss"
 
-** application id for user management /soft/local/common/data_files/current/param/APPLICATION_ID.data
-** restart CCTAgent: start_CCTAgent_nge1
-** install smth on hevev machine
-*** connect with filezilla to the machine using root/S***r and copy the file
-*** switch to su
-*** uncompress file.tar.Z
-** install application with nagra_install
-*** su - root
-*** /soft/ngesoft/nge1/CCTAgent/current/bin/nagra_install olegsoft oleg1 operator
 ** set debug log (put it into run.conf)
 J2EP_DEBUG=/tmp/jboss.log
 export J2EP_DEBUG
@@ -66,6 +51,9 @@ show dbs
 use <db>
 show collections
 db.profile.find({}, {dateStart: 1, title:1})
+
+export myprofile
+mongoexport -u admin -p  u78W2SxHgBkU --host 127.10.203.2 --authenticationDatabase admin -d myprofilerestapi  -c profile -o "tmp/profile.json"
 ** export all collections
 --- export 
 
@@ -111,6 +99,9 @@ scp [app-name]:/tmp/dump.zip c:/temp/mongodump/
 cd c:/temp/mongodump
 unzip dump.zip -d dump
 mongorestore dump
+** start on jenkins
+sudo /opt/app/mongodb/mongodb-linux-x86_64-2.4.14/bin/mongod --setParameter textSearchEnabled=true --dbpath /opt/app/mongodb/data/db &
+** -
 
 
 * Perforce
@@ -205,21 +196,191 @@ create a file with certificates:
 sudo vi /usr/share/pki/ca-trust-source/anchors/redhat.pem
 sudo update-ca-trust extract
 sudo systemctl restart docker
-
+** access files
+docker export <docker-id> > contents.tar
+** 
 
 
 * Openshift
-** [[https://github.com/openshift/training][Openshift training]]
-** [[https://docs.openshift.com/enterprise/3.1/install_config/][Openshift install]]
+** for nodes loop
+for node in chx-osh-01 chx-osh-02 chx-osh-03 chx-osh-04 chx-osh-05 chx-osh-06 chx-osh-07; do ssh ${node} " getenforce "; done
+** To check
+get pod -w watch command
+** login 
+oc login https://chx-osh.hq.k.grp:8443
+** Links
+*** [[https://github.com/openshift/training][Openshift training]]
+*** [[https://docs.openshift.com/enterprise/3.1/install_config/][Openshift install]]
+*** [[https://github.com/VeerMuchandi/jenkinsose3/blob/master/deploytodev][deployement script]]
+oc login -u$USER_NAME -p$USER_PASSWD --server=$OSE_SERVER --certificate-authority=$CERT_PATH
+
+oc project $DEVEL_PROJ_NAME
+
+#Is this a new deployment or an existing app? Decide based on whether the project is empty or not
+#If BuildConfig exists, assume that the app is already deployed and we need a rebuild
+
+BUILD_CONFIG=`oc get bc | tail -1 | awk '{print $1}'`
+
+if [ -z "$BUILD_CONFIG" -o $BUILD_CONFIG == "NAME" ]; then
+
+# no app found so create a new one
+  echo "Create a new app"
+  oc new-app --template=eap6-basic-sti -p \
+  APPLICATION_NAME=$APP_NAME,APPLICATION_HOSTNAME=$APP_HOSTNAME,EAP_RELEASE=6.4,GIT_URI=$APP_GIT,GIT_REF=$APP_GIT_REF,GIT_CONTEXT_DIR=$APP_GIT_CONTEXT_DIR\
+   -l name=$APP_NAME
+ 
+  echo "Find build id"
+  BUILD_ID=`oc get builds | tail -1 | awk '{print $1}'`
+  rc=1
+  attempts=75
+  count=0
+  while [ $rc -ne 0 -a $count -lt $attempts ]; do
+    BUILD_ID=`oc get builds | tail -1 | awk '{print $1}'`
+    if [ $BUILD_ID == "NAME" ]; then
+      count=$(($count+1))
+      echo "Attempt $count/$attempts"
+      sleep 5
+    else 
+      rc=0
+      echo "Build Id is :" ${BUILD_ID}
+    fi 
+  done
+
+  if [ $rc -ne 0 ]; then
+    echo "Fail: Build could not be found after maximum attempts"
+    exit 1
+  fi 
+else
+
+  # Application already exists, just need to start a new build
+  echo "App Exists. Triggering application build and deployment"
+  BUILD_ID=`oc start-build ${BUILD_CONFIG}`
+  
+fi
+
+echo "Waiting for build to start"
+rc=1
+attempts=25
+count=0
+while [ $rc -ne 0 -a $count -lt $attempts ]; do
+  status=`oc get build ${BUILD_ID} -t '{{.status.phase}}'`
+  if [[ $status == "Failed" || $status == "Error" || $status == "Canceled" ]]; then
+    echo "Fail: Build completed with unsuccessful status: ${status}"
+    exit 1
+  fi
+  if [ $status == "Complete" ]; then
+    echo "Build completed successfully, will test deployment next"
+    rc=0
+  fi
+  
+  if [ $status == "Running" ]; then
+    echo "Build started"
+    rc=0
+  fi
+  
+  if [ $status == "Pending" ]; then
+    count=$(($count+1))
+    echo "Attempt $count/$attempts"
+    sleep 5
+  fi
+done
+
+# stream the logs for the build that just started
+oc build-logs $BUILD_ID
+
+
+
+echo "Checking build result status"
+rc=1
+count=0
+attempts=100
+while [ $rc -ne 0 -a $count -lt $attempts ]; do
+  status=`oc get build ${BUILD_ID} -t '{{.status.phase}}'`
+  if [[ $status == "Failed" || $status == "Error" || $status == "Canceled" ]]; then
+    echo "Fail: Build completed with unsuccessful status: ${status}"
+    exit 1
+  fi
+
+  if [ $status == "Complete" ]; then
+    echo "Build completed successfully, will test deployment next"
+    rc=0
+  else 
+    count=$(($count+1))
+    echo "Attempt $count/$attempts"
+    sleep 5
+  fi
+done
+
+if [ $rc -ne 0 ]; then
+    echo "Fail: Build did not complete in a reasonable period of time"
+    exit 1
+fi
+
+
+echo "Checking build result status"
+rc=1
+count=0
+attempts=100
+while [ $rc -ne 0 -a $count -lt $attempts ]; do
+  status=`oc get build ${BUILD_ID} -t '{{.status.phase}}'`
+  if [[ $status == "Failed" || $status == "Error" || $status == "Canceled" ]]; then
+    echo "Fail: Build completed with unsuccessful status: ${status}"
+    exit 1
+  fi
+
+  if [ $status == "Complete" ]; then
+    echo "Build completed successfully, will test deployment next"
+    rc=0
+  else 
+    count=$(($count+1))
+    echo "Attempt $count/$attempts"
+    sleep 5
+  fi
+done
+
+if [ $rc -ne 0 ]; then
+    echo "Fail: Build did not complete in a reasonable period of time"
+    exit 1
+fi
+
+# scale up the test deployment
+RC_ID=`oc get rc | tail -1 | awk '{print $1}'`
+
+echo "Scaling up new deployment $test_rc_id"
+oc scale --replicas=1 rc $RC_ID
+
+
+echo "Checking for successful test deployment at $HOSTNAME"
+set +e
+rc=1
+count=0
+attempts=100
+while [ $rc -ne 0 -a $count -lt $attempts ]; do
+  if curl -s --connect-timeout 2 $APP_HOSTNAME >& /dev/null; then
+    rc=0
+    break
+  fi
+  count=$(($count+1))
+  echo "Attempt $count/$attempts"
+  sleep 5
+done
+set -e
+
+if [ $rc -ne 0 ]; then
+    echo "Failed to access test deployment, aborting roll out."
+    exit 1
+fi
+
+
+################################################################################
+##Include development test scripts here and fail with exit 1 if the tests fail##
+################################################################################
+
 ** Stale file handle
 sudo umount -f /data/pvolume
 sudo umount -l /data/pvolume
 sudo mount /data/pvolume
 ** Linux commands
-dig it-middleware-artifact.hq.k.grp
-dig it-middleware-artifact.hq.k.grp@10.0.92.180
-tcpdump -i ens32 udp port 53 -w /tmp/$(hostname)_vxlan_dns.pcap
-traceroute
 systemctl status nfs
 *** exports 
 /etc/exports
@@ -227,6 +388,7 @@ if modified run both
 $ exportfs -r
 $ exportfs -a
 ** User mgmt
+# here you add users as cluster admins
 sudo oc describe clusterPolicyBindings :default 
 oc get users,identity
 oc describe clusterPolicy default
@@ -244,8 +406,11 @@ sudo journalctl -u docker.service  >/tmp/docker-service.log
 sudo oc get pod -n default
 sudo oc logs <registry-podname> -n default
 
+openshift ex diagnostics
+
 sosreport -e docker -k docker.all=on
 ** master commands
+openshift ex diagnostics 
 *** check registry
 sudo oc volume --list dc/docker-registry
 sudo oc volume --list pod/docker-registry-2-rwed5
@@ -270,11 +435,15 @@ $ sudo oc deploy <docker-registry>
 
 AFTER
 $ sudo oadm manage-node  chx-osh-01.hq.k.grp  --schedulable=false
-
+*** kubernetes console
+$ cp /etc/origin/master/admin.kubeconfig ~/.kube/config 
+** overview
+sudo oadm manage-node chx-osh-03.hq.k.grp chx-osh-04.hq.k.grp chx-osh-06.hq.k.grp chx-osh-07.hq.k.grp --list-pods
+sudo oc get nodes
+sudo oc get services --all-namespaces
+sudo oc get route --all-namespaces -o wide
 ** Node commands
 sudo systemctl restart docker
-sudo oc get nodes
-sudo oadm manage-node chx-osh-03.hq.k.grp chx-osh-04.hq.k.grp chx-osh-06.hq.k.grp chx-osh-07.hq.k.grp --list-pods
 sudo oadm prune
 *** node config /etc/origin/node/node-config.yaml
 when doing modification restart with sudo systemctl restart atomic-openshift-node
@@ -289,6 +458,8 @@ sudo oc get all
 sudo oc get pods -o wide
 sudo oc get pod | grep Running | awk '{print $1}' | xargs sudo oc describe pod | grep -P '^Name:|IP:'
 
+** Container logs
+sudo find /var/lib/docker/containers -name *.log -exec ls -l {} ';'
 ** Big buffer router (single sign on)
 https://access.redhat.com/support/cases/#/case/01587424
 
@@ -333,6 +504,9 @@ $ oc get rc
 $ sudo oadm manage-node  chx-osh-01.hq.k.grp  --schedulable=false
 
 ** Remote debug
+https://access.redhat.com/support/cases/#/case/01586439
+https://github.com/kubernetes/kubernetes/blob/master/docs/user-guide/services.md#type-nodeport
+
 $ sudo oc edit service restapi -o json
 
 # port should be in a range 30000-32767
@@ -347,7 +521,56 @@ $ sudo oc edit service restapi -o json
 
 you can access the application by specifying chx-osh-07:31006 in the debugger
 
+** installing elasticsearch
+*** installing marvel
+./bin/plugin install file:/tmp/license-2.2.1.zip
+./bin/plugin install file:/tmp/marvel-agent-2.2.1.zip
+./bin/kibana plugin --install  marvel --url file:///tmp/marvel-1.3.1.zip
+** logstash config
+input {
+    file {
+#        path => "/var/lib/docker/containers/**/*.log"
+         path => "/tmp/logs/*.log"
+         start_position => beginning
+    }
+#     stdin {}
+}
 
+filter {
+     if (!([message] =~ "NAME:Forwarded")) {
+       drop { }
+     }
+     # if "_grokparsefailure" in [tags] { drop {} }
+
+     grok {
+        match => { "message" => "NAME:Forwarded, VALUE:for=%{IP:client}"}
+     }
+  }
+
+output {
+#    elasticsearch {}
+    stdout { codec => json }
+}
+
+
+** OS2 add user
+$oo-admin-ctl-user -c -l Username
+** 
+
+
+
+* Openssl
+** p12 to pem
+get certificate
+$ openssl pkcs12 -in path.p12 -out newfile.crt.pem -clcerts -nokeys
+get private key
+$ openssl pkcs12 -in path.p12 -out newfile.key.pem -nocerts -nodes
+both 
+$ openssl pkcs12 -in path.p12 -out newfile.pem
+
+** modulus md5
+openssl x509 -noout -modulus -in public-certificate.pem | openssl md5
+openssl rsa -noout -modulus -in certificate.key.pem 
 
 
 * Git
@@ -356,6 +579,42 @@ you can access the application by specifying chx-osh-07:31006 in the debugger
 
 * GitBlit
 ** Change user account type: adminopa@chx-webapp-01$ sudo vim  /nfs/repo_git/users.conf
+
+
+* Javascript
+** Pretty print object
+function DumpObjectIndented(obj, indent)
+{
+  var result = "";
+  if (indent == null) indent = "";
+
+  for (var property in obj)
+  {
+    var value = obj[property];
+    if (typeof value == 'string')
+      value = "'" + value + "'";
+    else if (typeof value == 'object')
+    {
+      if (value instanceof Array)
+      {
+        // Just let JS convert the Array to a string!
+        value = "[ " + value + " ]";
+      }
+      else
+      {
+        // Recursive dump
+        // (replace "  " by "\t" or something else if you prefer)
+        var od = DumpObjectIndented(value, indent + "  ");
+        // If you like { on the same line as the key
+        //value = "{\n" + od + "\n" + indent + "}";
+        // If you prefer { and } to be aligned
+        value = "\n" + indent + "{\n" + od + "\n" + indent + "}";
+      }
+    }
+    result += indent + "'" + property + "' : " + value + ",\n";
+  }
+  return result.replace(/,\n$/, "");
+}
 
 
 * Virtual box 
@@ -412,6 +671,17 @@ keytool -genkey -keystore server.keystore -storepass aTestPw2012 -keypass aTestP
                keystoreFile="${jboss.server.home.dir}/conf/server.keystore"
                keystorePass="aTestPw2012"/>
 
+
+
+* Linux network
+dig it-middleware-artifact.hq.k.grp
+dig it-middleware-artifact.hq.k.grp@10.0.92.180
+tcpdump -i ens32 udp port 53 -w /tmp/$(hostname)_vxlan_dns.pcap
+traceroute
+iptables -L
+netstat -taupen | grep LISTEN | grep ssh
+netstat -routen
+nc -v 10.0.0.1 22
 
 
 * Linux performance analysis
